Fix display screen alignments

--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ body {
 
 #screen #upScreen {
     font-size: 1.8em;
+    direction: ltr;
 }
 
 .Keys {
